fix styling on small screens

--- a/client/src/css/game-board.css
+++ b/client/src/css/game-board.css
@@ -6,6 +6,13 @@
     height: 100%;
 
     .button-section {
+        @media screen and (max-width: 640px){
+            width: 100%;
+            button {
+                width: 100%;
+                max-width: 100%;
+            }
+        }
         align-self: center;
     }
 }
@@ -15,36 +22,28 @@
     margin-bottom: 10px;
 }
 
-.poker {
-
+.reveal-btn {
+    min-width: 191px;
 }
 
 .players-container {
     width: 100%;
     text-align: start;
-    background-color: var(--secondary-white);
-    border-radius: 18px;
-    padding: 25px  30px;
+    background-color: var(--lightest-grey);
+    padding: 20px;
+    border-radius: 15px;
     height: 60%;
     h3 {
         margin-bottom: 20px;
     }
-}
 
-.players {
-    align-content: start;
-    text-align: left;
-    width: 80%;
-    div {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+    @media screen and (min-width: 640px){
+        padding:50px;
     }
 }
 
 .player {
-    height: 65px;
+    height: 45px;
     margin-bottom: 5px;
     display: flex;
     flex-direction: row;
@@ -52,6 +51,11 @@
     align-items: center;
     border-bottom: 1px solid rgba(72, 214, 210, 0.25);
     border-radius: 5px;
+
+    p {
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
 }
 
 .vote-card-section {
@@ -64,17 +68,25 @@
 .vote-option {
     background-color: var(--accent-blue);
     padding: unset;
-    min-width: 55px;
-    max-width: 55px;
-    min-height:70px;
-    max-height:70px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 5px 8px;
+    min-width: 35px;
+    max-width: 35px;
+    min-height:45px;
+    max-height:45px;
+    font-size: 0.925rem;
     &:hover {
         background-color: #058f8c;
         transition: ease-in-out .35s;
     }
     &:focus, &:focus-visible {
         background-color: var(--secondary-blue);
+    }
+
+    @media screen and (min-width: 640px) {
+        min-width: 40px;
+        max-width: 40px;
+        min-height: 55px;
+        max-height: 55px;
     }
 }
