--- a/client/src/css/join-room.css
+++ b/client/src/css/join-room.css
@@ -1,5 +1,5 @@
 .container-create-btn {
-    width: fit-content;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
 
@@ -7,6 +7,7 @@
         margin-left: 8px;
     }
     .text-small {
+        max-width: 193px;
         margin-bottom: 8px;
     }
 }
