--- a/client/src/css/vote.css
+++ b/client/src/css/vote.css
@@ -3,17 +3,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2859c5;
-    outline: 8px auto -webkit-focus-ring-color;
+    background-color: var(--dark-blue);
     padding: unset;
-    width: 35px;
-    height:45px;
+    width: 30px;
+    height:40px;
+    margin-bottom: 10px;
     border-radius: 5px;
     color: white;
 
     &.visible {
-        background-color: #2a6fdb;
-        outline: 8px auto -webkit-focus-ring-color;
+        background-color: var(--secondary-blue);
+        transition: 0.3s;
         @media screen and (min-width: 640px){
             font-weight: 600;
         }
